--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a href="#testimonials" class="nav-link">projects</a>
                         </li>
                         <li class="navbar-item">
-                                <a href="https://1drv.ms/b/s!AlfN2CM5SUlDggf-CbA9wnvQQhjm?e=8GSNfU" class="nav-link">Resume</a>
+                                <a href="https://github.com/Eric-Chun/Eric-Chun-Portfolio/blob/main/ResumeLab.pdf" class="nav-link">Resume</a>
                                 </li>
                 </ul>
             </div>
