--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a href="#testimonials" class="nav-link">projects</a>
                         </li>
                         <li class="navbar-item">
-                                <a href="ResumeLab (3).pdf" class="nav-link">Resume</a>
+                                <a href="https://github.com/Eric-Chun/Eric-Chun-Portfolio/blob/main/ResumeLab%20(3).pdf" class="nav-link">Resume</a>
                                 </li>
                 </ul>
             </div>
