--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="row">
             <div class="col-lg-6">
             <h1>Design portfolio</h1>
-            <h2>I am a student at UCSD that has been working on designing apps and websites. I usually work with VS code and Figma</h2>
+            <h2>I am a student at UCSD who has been working on designing apps and websites. I usually work with VS code,python,Figma</h2>
           </div>
           <div class="col-lg-6">
           </div>
