--- a/BrosGameShop1.html
+++ b/BrosGameShop1.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/f06c073728.js" crossorigin="anonymous"></script>
     <meta name="keywords" content="xbox 360,playstation,Nintendo,video games,new &amp; used video game sales,vintage video games for sale,classic video games for sale,video game systems for sale,video game system repairs,repair scratched disks,repair scratched DVD,repair scratched CD,repair scratched video games,retro games,Gameshops in Torrance">
     <meta name="description" content="Bros Game Shop video game store in Torrance california,latest video game releases,classic video games,vintage game systems ">
-    <title>Bros. Game Shop | New & Retro Games and Systems</title>
+    <title>Bros. Game Shop | New & Retro Games</title>
   </head>
   
   <body>
@@ -58,91 +58,51 @@
       </div>
 
         </div>
-
-          <div class="col-lg-6">
-          <div id="testimonial-carousel" class="carousel slide" data-ride="false" >
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-               <h2>Old School Classics!</h2>
-          <img class="testimonial-image" src="Bros1.jpg">
-              </div>
-              <div class="carousel-item">
-                <h2>Come by our store today!</h2>
-                <img class="testimonial-image" src="Bros2.JPG">
-            </div>
-            <div class="carousel-item">
-              <h2>Check out our wide selection of Games!</h2>
-              <img class="testimonial-image" src="Bros3.JPG">
-            </div>
-            <div class="carousel-item">
-              <h2>We sell Old and New Games</h2>
-              <img class="testimonial-image" src="bros4.JPG">
-            </div>
-            </div>
-            <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
+        <div class="col-lg-6">
+            <div class="card header">
+            <h3>Why Us?</h3>
           </div>
-</div>
+          <ul class="card-body">
+            <li>We offer competitive prices that are usually $5 dollars below the price of other stores.</li>
+            <li>We are able to repair broken systems and refurbish scratched disks!</li>
+            <li>We have classic and rare games and systems!</li>  
+          </ul>
+          </div>
         </div>
 </div>
 
     </section>
-
-
-<section id="pricing">
-<div class="row">
-  <div class="pricing-column col-lg-4 col-md-6">
-    <div class="card">
-      <div class="card header">
-      <h3>Why Us?</h3>
-    </div>
-    <ul class="card-body">
-      <li>We offer competitive prices that are usually $5 dollars below the price of other stores.</li>
-      <li>We are able to repair broken systems and refurbish scratched disks!</li>
-      <li>Classic and hard to find games and systems!</li>  
-    </ul>
-    </div>
-  </div>
-    
-<div class="pricing-column col-lg-4 col-md-6">
-      <div class="card">
-        <div class="card header">
-        <h3>Products</h3>
+    <section id="testimonials">
+    <div id="testimonial-carousel" class="carousel slide" data-ride="false" >
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+         <h2>Old School Classics!</h2>
+    <img class="testimonial-image" src="Bros1.jpg">
         </div>
-<ul class="card-body">
-    <li>Playstation:PS5, PS4, PS3, PS2, PS1</li>
-      <li>Kinect, XBOX ONE, XBOX 360, XBOX </li>
-      <li>WiiU, Wii, GameCube,switch,switch lite</li>
-      <li>DS, DSi, DSi XL, 3DS, 3DS XL, 2DS </li>
-      <li> Nintendo, Super Nintendo, N64, Atari, </li>
-      <li> turbo grafix 16, 32X, </li>
-      <li>Sega Genesis, Dreamcast, Saturn </li>
-      <li>PSVita, PSP </li>
-      <li>Gameboy Advance, Gameboy Color
-    </li>
-</ul>
-  </div>
-</div>
-        <div class="pricing-column col-lg-4 col-md-6">
-          <div class="card">
-            <div class="card-header">
-    <h3>Services</h3>
+        <div class="carousel-item">
+          <h2>Come by our store today!</h2>
+          <img class="testimonial-image" src="Bros2.JPG">
+      </div>
+      <div class="carousel-item">
+        <h2>Check out our wide selection of Games!</h2>
+        <img class="testimonial-image" src="Bros3.JPG">
+      </div>
+      <div class="carousel-item">
+        <h2>We sell Old and New Games</h2>
+        <img class="testimonial-image" src="bros4.JPG">
+      </div>
+      </div>
+      <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
-    <ul class="card-body">
-      <li>Console Repairs</li>
-        <li>Disk Refurbishment</li>
-
-  </ul>
 </div>
-</div>
-</div>
-</section>
+    </section>
 <footer id="footer">
   <p>Follow and review us here!</p>
   <a href="http://www.facebook.com/pages/Bros-Game-Shop/124736380915038" target="_blank"><i class="fa-brands fa-facebook fa-2xl"></a></i>
