--- a/index.html
+++ b/index.html
@@ -63,12 +63,17 @@
                 <p><a href="studyBuddyFiles-LAB starter\ChunLab3.html.html">Study Buddy</a></p>
             </div>
             <div class="carousel-item">
-              <h2>here are some of my other projects</h2>
+              <h2> Here are some of my other projects</h2>
               <p><a href="lab1">Html Lab</a></p>
               <p><a href="lab2">css Lab</a></p>
           </div>
+              <div class="carousel-item">
+               <h2>This is a website I made for my former employer's gameshop</h2>
+          <img class="testimonial-image" src="dice_lab_example.png">
+          <p><a href="ChunLab6DiceLab\dice-lab\dice.html">Javascript dice lab</a></p>
+              </div>
             <div class="carousel-item">
-              <h2>I desgined an app in Figma</h2>
+              <h2>I designed an app in Figma</h2>
               <img class="testimonial-image" src="figma_sample.png">
               <p><a href="https://www.figma.com/proto/IHvGfDX1Fwf53ZvQ60DXn6/Figma-101app?node-id=9%3A4&scaling=min-zoom&page-id=0%3A1&starting-point-node-id=9%3A4&show-proto-sidebar=1">Sleep helping app</a></p>
              </div>
