--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <div class="carousel-item">
                <h2>This is a website I made for my former employer's gameshop</h2>
           <img class="testimonial-image" src="dice_lab_example.png">
-          <p><a href="ChunLab6DiceLab\dice-lab\dice.html">Javascript dice lab</a></p>
+          <p><a href="BrosGSWebsite/BrosGameShop1.html">Bros Gameshop website</a></p>
               </div>
             <div class="carousel-item">
               <h2>I designed an app in Figma</h2>
