--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           </div>
               <div class="carousel-item">
                <h2>This is a website I made for my former employer's gameshop</h2>
-          <img class="testimonial-image" src="dice_lab_example.png">
+          <img class="testimonial-image" src="BrosGSWebsite/BrosLogo1.png">
           <p><a href="BrosGSWebsite/BrosGameShop1.html">Bros Gameshop website</a></p>
               </div>
             <div class="carousel-item">
