--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                     <li class="navbar-item">
                         <a href="#testimonials" class="nav-link">projects</a>
                         </li>
+                  <li class="navbar-item">
+                        <a href="ResumeLab (3).pdf" class="nav-link">resume</a>
+                        </li>
                        
                 </ul>
             </div>
