--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a href="#testimonials" class="nav-link">projects</a>
                         </li>
                   <li class="navbar-item">
-                        <a href="ResumeLab (3).pdf" class="nav-link">resume</a>
+                        <a href="Resume.pdf" class="nav-link">resume</a>
                         </li>
                        
                 </ul>
