--- a/index.html
+++ b/index.html
@@ -74,9 +74,8 @@
           <p><a href="BrosGSWebsite/BrosGameShop1.html">Bros Gameshop website</a></p>
               </div>
             <div class="carousel-item">
-              <h2>I designed an app in Figma</h2>
-              <img class="testimonial-image" src="figma_sample.png">
-              <p><a href="https://www.figma.com/proto/IHvGfDX1Fwf53ZvQ60DXn6/Figma-101app?node-id=9%3A4&scaling=min-zoom&page-id=0%3A1&starting-point-node-id=9%3A4&show-proto-sidebar=1">Sleep helping app</a></p>
+              <h2>I worked with a team to design an app in Figma</h2>
+              <p><a href="https://www.figma.com/design/VkDcd2g8lgExmF9q3EyCqY/AI-Wardrobe-Prototype-(Copy)?node-id=0-1&p=f&t=Z9Mn9m0Mwl7hUmcX-0">Weather clothing app</a></p>
              </div>
             </div>
             <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
