--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
             </div>
             <div class="carousel-item">
               <h2> Here are some of my other projects</h2>
-              <p><a href="lab1">Html Lab</a></p>
-              <p><a href="lab2">css Lab</a></p>
+              <p><a href="https://github.com/Eric-Chun/Eric-Chun-Portfolio/tree/main/cogs181_finalfiles">Nueral network image classification project</a></p>
           </div>
               <div class="carousel-item">
                <h2>This is a website I made for my former employer's gameshop</h2>
