--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="row">
             <div class="col-lg-6">
             <h1>Design portfolio</h1>
-            <h2>I am a student at UCSD that has been working on designing apps and websites. I usually work with VS code,python,and Figma</h2>
+            <h2>I am a student at UCSD working with AI/Machine learning methods, data analysis, and UI/Ux design. I am competent working with Python(Familiar with numpy, scikit-learn, pandas, pytorch),HTML,CSS, and Figma</h2>
           </div>
           <div class="col-lg-6">
           </div>
