--- a/index.html
+++ b/index.html
@@ -64,8 +64,12 @@
                 <p><a href="studyBuddyFiles-LAB starter\ChunLab3.html.html">Study Buddy</a></p>
             </div>
             <div class="carousel-item">
-              <h2> Here are some of my other projects</h2>
+              <h2> This is my final project for my nueral network class</h2>
               <p><a href="https://github.com/Eric-Chun/Eric-Chun-Portfolio/tree/main/cogs181_finalfiles">Nueral network image classification project</a></p>
+          </div>
+              <div class="carousel-item">
+              <h2> This is a data analysis project of traffic data</h2>
+              <p><a href=" https://github.com/Eric-Chun/SD_traffic_data_analysis/tree/main/Group57_SP24">Data analysis of San Diego traffic accidents</a></p>
           </div>
               <div class="carousel-item">
                <h2>This is a website I made for my former employer's gameshop</h2>
