--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           <!-- Title -->
           <div class="row">
             <div class="col-lg-6">
-            <h1>Design portfolio</h1>
-            <h2>I am a student at UCSD working with AI/Machine learning methods, data analysis, and UI/Ux design. I am competent working with Python(Familiar with numpy, scikit-learn, pandas, pytorch),HTML,CSS, and Figma</h2>
+            <h1>Portfolio</h1>
+            <h2>I am a student at UCSD working with AI/Machine learning methods, data analysis, and UI/Ux design. I am competent working with Python(Familiar with numpy, scikit-learn, pandas, PyTorch), Data entry, Excel, HTML, and CSS</h2>
           </div>
           <div class="col-lg-6">
           </div>
@@ -105,4 +105,5 @@
       </body>
     </html>
     
+
 
